Added programmingLanguage model

--- a/nArch.Management/src/Project.Devs/Application/Application.csproj
+++ b/nArch.Management/src/Project.Devs/Application/Application.csproj
@@ -6,4 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\ProgrammingLanguages\Commands\" />
+    <Folder Include="Features\ProgrammingLanguages\Contants\" />
+    <Folder Include="Features\ProgrammingLanguages\Dtos\" />
+    <Folder Include="Features\ProgrammingLanguages\Models\" />
+    <Folder Include="Features\ProgrammingLanguages\Rules\" />
+    <Folder Include="Features\ProgrammingLanguages\Queries\" />
+    <Folder Include="Features\ProgrammingLanguages\Profiles\" />
+    <Folder Include="Services\Repositories\" />
+  </ItemGroup>
+
 </Project>
