--- a/nArch.Management/src/Project.Devs/WebAPI/appsettings.json
+++ b/nArch.Management/src/Project.Devs/WebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Dev.ioConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=Dev.ioDb; Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
