--- a/nArch.Management/src/Project.Devs/Application/Application.csproj
+++ b/nArch.Management/src/Project.Devs/Application/Application.csproj
@@ -7,13 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Features\ProgrammingLanguages\Commands\" />
     <Folder Include="Features\ProgrammingLanguages\Contants\" />
-    <Folder Include="Features\ProgrammingLanguages\Dtos\" />
-    <Folder Include="Features\ProgrammingLanguages\Models\" />
-    <Folder Include="Features\ProgrammingLanguages\Rules\" />
-    <Folder Include="Features\ProgrammingLanguages\Queries\" />
-    <Folder Include="Features\ProgrammingLanguages\Profiles\" />
     <Folder Include="Services\Repositories\" />
   </ItemGroup>
 
@@ -24,6 +18,7 @@
 	</ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\corePackages\Core.Application\Core.Application.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
