--- a/nArch.Management/src/Project.Devs/Application/Application.csproj
+++ b/nArch.Management/src/Project.Devs/Application/Application.csproj
@@ -8,7 +8,9 @@
 
   <ItemGroup>
     <Folder Include="Features\ProgrammingLanguages\Contants\" />
-    <Folder Include="Services\Repositories\" />
+    <Folder Include="Features\Technologies\Commands\" />
+    <Folder Include="Features\Technologies\Constants\" />
+    <Folder Include="Features\Technologies\Rules\" />
   </ItemGroup>
 
 	<ItemGroup>
